@@ -1,1 +1,1 @@
-1.8.10.0-rc4
+1.8.10.0
